[gd_scene load_steps=10 format=3 uid="uid://byji17g7rve6j"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_3vnnt"]
[ext_resource type="Texture2D" uid="uid://77kj5e1xl2xn" path="res://Rocky Roads/Enemies/slime_red.png" id="2_2bwho"]

[sub_resource type="Animation" id="Animation_r5br6"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5jk5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c66q5"]
resource_name = "Walk"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6rvy4"]
_data = {
"Idle": SubResource("Animation_r5br6"),
"RESET": SubResource("Animation_5jk5f"),
"Walk": SubResource("Animation_c66q5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yoyxj"]
size = Vector2(14, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yqwt"]
size = Vector2(16, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfn61"]
size = Vector2(1, 8)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_3vnnt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -8)
texture = ExtResource("2_2bwho")
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6rvy4")
}
speed_scale = 3.508

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -4.5)
shape = SubResource("RectangleShape2D_yoyxj")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -5)
shape = SubResource("RectangleShape2D_1yqwt")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-12, -9)
scale = Vector2(0.2, 0.2)
collision_mask = 4

[node name="LeftSensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSensor"]
position = Vector2(-10, -4)
shape = SubResource("RectangleShape2D_yfn61")

[node name="RightSensor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSensor"]
position = Vector2(8, -4)
shape = SubResource("RectangleShape2D_yfn61")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="LeftSensor" to="." method="_on_left_sensor_body_entered"]
[connection signal="body_entered" from="RightSensor" to="." method="_on_right_sensor_body_entered"]
